Tested with langchain and ollama agents

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
 llama-cpp-python==0.2.24
 uvicorn==0.25.0
 anyio==4.2.0
-starlette==0.34.0
-fastapi==0.105.0
 pydantic_settings==2.1.0
 sse_starlette==1.8.2
 starlette_context==0.3.6
-langchain==0.2.3
-langchain-community==0.2.4
-langchain-core==0.2.5
 openai==1.33.0
 duckduckgo-search==6.2.11
+langchain-community>=0.2.16
+langchain>=0.2.16
+langchain-core>=0.2.38
