--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ duckduckgo-search==6.2.11
 langchain-community>=0.2.16
 langchain>=0.2.16
 langchain-core>=0.2.38
+langchain-anthropic>=0.1.23
+langgraph>=0.2.18
