--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ anyio==4.2.0
 pydantic_settings==2.1.0
 sse_starlette==1.8.2
 starlette_context==0.3.6
-openai==1.33.0
-duckduckgo-search==6.2.11
-langchain-community>=0.2.16
-langchain>=0.2.16
+openai>=1.54.3
+duckduckgo-search>=6.2.13
+langchain-community>=0.2.12
+langchain>=0.2.15
 langchain-core>=0.2.38
 langchain-anthropic>=0.1.23
 langgraph>=0.2.18
 langchain-experimental>=0.0.65
 aiohttp>=3.9.5
+yfinance>=0.2.55
+mcp>=1.6.0
